# BetterMouse

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.manifest  compile.bat  first.cbp  first.cpp  installer.iss  main.cpp  mouse files.c  mouse gestures.cbp  mouse gestures.cpp  mouse gestures.depend  resource.h  resource.rc
